# vdm-rs

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  format-code.sh  run_demo.sh
docs/: demo.md  evaluation_demo.md  image_transport.md  plan.md
include/: gf256.hpp  linalg.hpp  matrix.hpp
include/vdm_rs/: gf256.hpp  linalg.hpp  matrix.hpp  reed_solomon.hpp  stream_demo.hpp
src/: linalg.c  link_sim.cpp  main.cpp  rs_file.cpp  rx.cpp  tx.cpp
tests/: test_gf256.cpp  test_linalg.cpp  test_mat_inv.cpp  test_reed_solomon.cpp  test_stream_demo.cpp  test_support.hpp
tools/: evaluate_stream_demo.py  image_loss_demo.py  image_pipeline_eval.py  image_transport.py
